--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,30 +2,69 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.babu.jobsandesh">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/splash_img"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SplashScreen">
+        <activity
+            android:name=".SplashScreen"
+            android:noHistory="true"
+            android:theme="@style/SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".employer.Employer_LoginActivity" />
-        <activity android:name=".jobseeker.JobseekRegisterActivity" />
-        <activity android:name=".employer.employerRegisterActivity" />
-        <activity android:name=".jobseeker.LoginActivity" />
+        <activity android:name=".MainActivity"
+            android:noHistory="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".jobseeker.JobseekerLoginActivity"
+            android:noHistory="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".employer.Employer_LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".jobseeker.JobseekRegisterActivity" />
+        <activity android:name=".employer.EmployerRegisterActivity" />
         <activity
             android:name=".jobseeker.JobseekNavActivity"
             android:label="@string/title_activity_jobseek_nav"
             android:theme="@style/AppTheme.NoActionBar" />
-        <!--<activity android:name=".SplashScreen"></activity>-->
+        <activity
+            android:name=".employer.EmpNavigationActivity"
+            android:label="@string/title_activity_emp_navigation"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".jobseeker.JobPostDescriptionActivity"></activity>
+
+        <service android:name=".fcm.FirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+
+            </intent-filter>
+
+        </service>
+
+
     </application>
 
 </manifest>
